--- a/jaxb-ri/docs/release-documentation/src/docbook/style/documentation.css
+++ b/jaxb-ri/docs/release-documentation/src/docbook/style/documentation.css
@@ -8,7 +8,7 @@
  * and Distribution License("CDDL") (collectively, the "License").  You
  * may not use this file except in compliance with the License.  You can
  * obtain a copy of the License at
- * https://glassfish.dev.java.net/public/CDDL+GPL_1_1.html
+ * http://glassfish.java.net/public/CDDL+GPL_1_1.html
  * or packager/legal/LICENSE.txt.  See the License for the specific
  * language governing permissions and limitations under the License.
  *
@@ -38,7 +38,7 @@
  * holder.
  */
 
-/* dev.java.net branding */
+/* java.net branding */
 
 body {
     color:  #333;
@@ -50,7 +50,7 @@ body {
     font-family: Arial,Helvetica,sans-serif !important;
 }
 
-/* dev.java.net branding */
+/* java.net branding */
 
 .book h1 , .chapter h1 {
     color: #E76F00;
